--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -52,6 +52,15 @@
             android:layout_marginTop="24dp"
             android:textSize="18sp"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <Switch
+            android:id="@+id/screenSaver"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/ScreenSaverText"
+            android:layout_marginTop="24dp"
+            android:textSize="18sp"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
     </LinearLayout>
 
     <Button
