--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -61,6 +61,35 @@
             android:layout_marginTop="24dp"
             android:textSize="18sp"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <TextView
+                android:id="@+id/httpServerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:text="@string/http_server_status_default"/>
+
+            <Button
+                android:id="@+id/httpServerButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="24dp"
+                android:text="@string/start"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <Button
@@ -71,7 +100,6 @@
         android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-         />
-
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
