--- a/app/src/main/res/layout/digital_clock_and_date_screen_saver.xml
+++ b/app/src/main/res/layout/digital_clock_and_date_screen_saver.xml
@@ -22,9 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:textColor="@android:color/white"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="sans-serif-medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
