--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -10,6 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:overScrollMode="never"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/backButton">
 
@@ -54,6 +55,32 @@
                 android:text="@string/automaticBrightnessText"
                 android:textSize="18sp"/>
 
+            <LinearLayout
+                android:id="@+id/brightnessSettingLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/brightness"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <SeekBar
+                    android:id="@+id/brightnessSetting"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:max="255"
+                    android:min="1"
+                    />
+
+            </LinearLayout>
+
             <Switch
                 android:id="@+id/screenSaver"
                 android:layout_width="match_parent"
@@ -64,6 +91,7 @@
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
 
             <LinearLayout
+                android:id="@+id/screenSaverDelayLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -88,6 +116,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/screenSaverTypeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -108,7 +137,17 @@
                     android:spinnerMode="dialog"/>
             </LinearLayout>
 
+            <Switch
+                android:id="@+id/httpServerEnabled"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/http_server_enabled"
+                android:layout_marginTop="24dp"
+                android:textSize="18sp"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+
             <LinearLayout
+                android:id="@+id/httpServerLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -129,6 +168,124 @@
                     android:textSize="18sp"
                     android:text="@string/start"
                     android:paddingVertical="0dp"/>
+            </LinearLayout>
+
+            <Switch
+                android:id="@+id/extendedJavascriptInterface"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/extended_js_interface"
+                android:layout_marginTop="24dp"
+                android:textSize="18sp"
+                tools:ignore="UseSwitchCompatOrMaterialXml"/>
+
+            <Switch
+                android:id="@+id/mqttEnabled"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/mqtt"
+                android:layout_marginTop="24dp"
+                android:textSize="18sp"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+            <LinearLayout
+                android:id="@+id/mqttBrokerLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/broker_address"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/mqttBroker"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:hint="tcp://192.168.1.123"
+                    android:inputType="textUri"
+                    android:textSize="18sp"
+                    android:imeOptions="actionDone"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/mqttPortLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Broker port"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/mqttPort"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:hint="1883"
+                    android:inputType="number"
+                    android:textSize="18sp"
+                    android:imeOptions="actionDone"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/mqttUsernameLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Username"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/mqttUsername"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:hint="username"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:imeOptions="actionDone"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/mqttPasswordLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Password"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/mqttPassword"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:hint="password"
+                    android:inputType="text"
+                    android:textSize="18sp"
+                    android:imeOptions="actionDone"/>
             </LinearLayout>
 
             <Switch
@@ -159,6 +316,7 @@
         android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:focusable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
