Simplify screensaver activieties

--- a/app/src/main/res/layout/digital_clock_screen_saver.xml
+++ b/app/src/main/res/layout/digital_clock_screen_saver.xml
@@ -13,6 +13,7 @@
         android:textColor="@android:color/white"
         android:fontFamily="sans-serif-black"
         app:layout_constraintTop_toTopOf="parent"
+        tools:text="10:52"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
