--- a/app/src/main/res/layout/digital_clock_and_date_screen_saver.xml
+++ b/app/src/main/res/layout/digital_clock_and_date_screen_saver.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:textSize="120sp"
         android:textColor="@android:color/white"
+        tools:text="10:52"
         android:fontFamily="sans-serif-black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,6 +26,7 @@
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:fontFamily="sans-serif-medium"
+        tools:text="April, 3rd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
