Update to material 3

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,48 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_primary">#4800B2</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#6200EE</color>
+    <color name="md_theme_onPrimaryContainer">#D0BEFF</color>
+    <color name="md_theme_secondary">#674DAE</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#B398FF</color>
+    <color name="md_theme_onSecondaryContainer">#45298A</color>
+    <color name="md_theme_tertiary">#720068</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#9A008C</color>
+    <color name="md_theme_onTertiaryContainer">#FFAEEA</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#93000A</color>
+    <color name="md_theme_background">#FDF7FF</color>
+    <color name="md_theme_onBackground">#1D1A25</color>
+    <color name="md_theme_surface">#FDF7FF</color>
+    <color name="md_theme_onSurface">#1D1A25</color>
+    <color name="md_theme_surfaceVariant">#E8DFF6</color>
+    <color name="md_theme_onSurfaceVariant">#494456</color>
+    <color name="md_theme_outline">#7A7488</color>
+    <color name="md_theme_outlineVariant">#CBC3D9</color>
+    <color name="md_theme_inverseSurface">#322F3A</color>
+    <color name="md_theme_inverseOnSurface">#F5EEFE</color>
+    <color name="md_theme_inversePrimary">#CFBDFF</color>
+    <color name="md_theme_primaryFixed">#E8DDFF</color>
+    <color name="md_theme_onPrimaryFixed">#22005D</color>
+    <color name="md_theme_primaryFixedDim">#CFBDFF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#5300CD</color>
+    <color name="md_theme_secondaryFixed">#E8DDFF</color>
+    <color name="md_theme_onSecondaryFixed">#22005D</color>
+    <color name="md_theme_secondaryFixedDim">#CFBDFF</color>
+    <color name="md_theme_onSecondaryFixedVariant">#4F3494</color>
+    <color name="md_theme_tertiaryFixed">#FFD7F1</color>
+    <color name="md_theme_onTertiaryFixed">#390033</color>
+    <color name="md_theme_tertiaryFixedDim">#FFACEA</color>
+    <color name="md_theme_onTertiaryFixedVariant">#840078</color>
+    <color name="md_theme_surfaceDim">#DED7E7</color>
+    <color name="md_theme_surfaceBright">#FDF7FF</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F8F1FF</color>
+    <color name="md_theme_surfaceContainer">#F2EBFB</color>
+    <color name="md_theme_surfaceContainerHigh">#EDE5F5</color>
+    <color name="md_theme_surfaceContainerHighest">#E7E0F0</color>
 </resources>
