--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -4,5 +4,5 @@
     android:accessibilityFeedbackType="feedbackGeneric"
     android:notificationTimeout="100"
     android:description="@string/accessibility_description"
-    android:canPerformGestures="true"
+    android:canPerformGestures="false"
     android:accessibilityFlags="flagDefault"/>
