--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -56,7 +56,7 @@
                     android:inputType="textUri"
                     android:textSize="18sp" />
 
-                <Switch
+                <com.google.android.material.materialswitch.MaterialSwitch
                     android:id="@+id/switchOnSwipe"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -65,7 +65,7 @@
                     android:textSize="18sp"
                     tools:ignore="UseSwitchCompatOrMaterialXml" />
 
-                <androidx.appcompat.widget.SwitchCompat
+                <com.google.android.material.materialswitch.MaterialSwitch
                     android:id="@+id/automaticBrightness"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -81,23 +81,23 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_gravity="center_vertical"
                         android:text="@string/brightness"
                         android:textSize="18sp" />
 
-                    <SeekBar
+                    <com.google.android.material.slider.Slider
                         android:id="@+id/brightnessSetting"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:max="255"
-                        android:min="1" />
+                        android:valueFrom="1"
+                        android:valueTo="255" />
 
                 </LinearLayout>
 
-                <Switch
+                <com.google.android.material.materialswitch.MaterialSwitch
                     android:id="@+id/screenSaver"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -110,6 +110,7 @@
                     android:id="@+id/screenSaverDelayLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="48dp"
                     android:layout_marginTop="24dp"
                     android:orientation="horizontal">
 
@@ -134,6 +135,7 @@
                     android:id="@+id/screenSaverTypeLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="48dp"
                     android:layout_marginTop="24dp"
                     android:orientation="horizontal">
 
@@ -151,7 +153,7 @@
                         android:spinnerMode="dialog" />
                 </LinearLayout>
 
-                <Switch
+                <com.google.android.material.materialswitch.MaterialSwitch
                     android:id="@+id/httpServerEnabled"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -164,8 +166,8 @@
                     android:id="@+id/httpServerAddressLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
                     android:layout_marginStart="48dp"
+                    android:layout_marginTop="24dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -180,16 +182,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingVertical="0dp"
-                        tools:text="http://127.0.0.1:8080"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        tools:text="http://127.0.0.1:8080" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/httpServerLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
                     android:layout_marginStart="48dp"
+                    android:layout_marginTop="24dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -206,8 +208,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="end"
-                        tools:text="@string/http_server_running"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        tools:text="@string/http_server_running" />
 
                     <Button
                         android:id="@+id/httpServerButton"
@@ -218,7 +220,7 @@
                         android:textSize="18sp" />
                 </LinearLayout>
 
-                <Switch
+                <com.google.android.material.materialswitch.MaterialSwitch
                     android:id="@+id/extendedJavascriptInterface"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -227,7 +229,7 @@
                     android:textSize="18sp"
                     tools:ignore="UseSwitchCompatOrMaterialXml" />
 
-                <Switch
+                <com.google.android.material.materialswitch.MaterialSwitch
                     android:id="@+id/mqttEnabled"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -239,7 +241,7 @@
                 <LinearLayout
                     android:id="@+id/mqttBrokerLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="wrap_content"  android:layout_marginStart="48dp"
                     android:layout_marginTop="24dp"
                     android:orientation="horizontal">
 
@@ -262,7 +264,7 @@
 
                 <LinearLayout
                     android:id="@+id/mqttPortLayout"
-                    android:layout_width="match_parent"
+                    android:layout_width="match_parent"  android:layout_marginStart="48dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:orientation="horizontal">
@@ -287,7 +289,7 @@
 
                 <LinearLayout
                     android:id="@+id/mqttUsernameLayout"
-                    android:layout_width="match_parent"
+                    android:layout_width="match_parent"  android:layout_marginStart="48dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:orientation="horizontal">
@@ -313,7 +315,7 @@
                     android:id="@+id/mqttPasswordLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="24dp"  android:layout_marginStart="48dp"
                     android:orientation="horizontal">
 
                     <TextView
